# ita-slo

./: .gitignore  README.md  REPORT.md  analyze_single.py  compare_same_language.py  compare_two.py  main.py  pyproject.toml  test_parsing.py
data/: edinost_19020217.txt  edinost_19020217_ita.txt  edinost_19020218.txt  edinost_19020218_ita.txt  edinost_19020219.txt  edinost_19020219_ita.txt  edinost_19020220.txt  edinost_19020220_ita.txt  edinost_19020909_traduzione_italiana.txt  edinost_19020909_trascrizione_completa.txt  edinost_sciopero.txt  edinost_sciopero_ita.txt  il_piccolo_19020909_pagina1.txt  il_piccolo_19020909_pagina2.txt  il_piccolo_19020909_pagina3.txt  il_piccolo_19020909_pagina4.txt  il_piccolo_19020909_tot.txt  piccolo_19020217.txt  piccolo_19020218.txt  piccolo_19020219.txt  piccolo_19020220.txt  piccolo_sciopero.txt
outputs/models/: edinost_lda.model  edinost_lda.model.expElogbeta.npy  edinost_lda.model.id2word  edinost_lda.model.state  edinost_tfidf_vectorizer.pkl  il_piccolo_lda.model  il_piccolo_lda.model.expElogbeta.npy  il_piccolo_lda.model.id2word  il_piccolo_lda.model.state  il_piccolo_tfidf_vectorizer.pkl
outputs/my_comparison/: edinost_results.json  il_piccolo_results.json
outputs/my_comparison2/: edinost_extreme_sentences.json  edinost_results.json  il_piccolo_extreme_sentences.json  il_piccolo_results.json
outputs/parsed/: edinost_articles.json  edinost_articles_analyzed.json  il_piccolo_articles.json  il_piccolo_articles_analyzed.json
outputs/results/: analysis_summary.json  comparative_analysis.json  edinost_clusters.json  (+9 more)
(+16 files in other folders)
